--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "predeploy": "bun run build",
-        "deploy": "gh-pages -d build"
+        "lint": "next lint"
     },
     "dependencies": {
         "@emotion/react": "^11.11.4",
