--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "firebase": "^10.10.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18",
-    "reactfire": "^4.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
